@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Window.H,v 1.12.2.6.2.3 2002/07/14 21:25:39 easysw Exp $"
+// "$Id: Fl_Window.H,v 1.12.2.6.2.4 2002/08/01 02:15:41 easysw Exp $"
 //
 // Window header file for the Fast Light Tool Kit (FLTK).
 //
@@ -43,6 +43,9 @@ class FL_EXPORT Fl_Window : public Fl_Group {
   // size_range stuff:
   short minw, minh, maxw, maxh;
   uchar dw, dh, aspect, size_range_set;
+  // cursor stuff
+  Fl_Cursor cursor_default;
+  Fl_Color cursor_fg, cursor_bg;
   FL_EXPORT void size_range_();
   // values for flags():
   enum {
@@ -112,6 +115,7 @@ public:
 
   // for back-compatability only:
   void cursor(Fl_Cursor, Fl_Color=FL_BLACK, Fl_Color=FL_WHITE);
+  void default_cursor(Fl_Cursor, Fl_Color=FL_BLACK, Fl_Color=FL_WHITE);
   static void default_callback(Fl_Window*, void* v);
 
 };
@@ -119,5 +123,5 @@ public:
 #endif
 
 //
-// End of "$Id: Fl_Window.H,v 1.12.2.6.2.3 2002/07/14 21:25:39 easysw Exp $".
+// End of "$Id: Fl_Window.H,v 1.12.2.6.2.4 2002/08/01 02:15:41 easysw Exp $".
 //
