@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.0
 
 	- Documentation updates.
+	- Added image() methods() to Fl_Menu_Item.
+	- Added default_cursor() method and data to Fl_Window.
 	- Fl_Group would send FL_ENTER events before FL_LEAVE
 	  events, causing problems with adjacent widgets.
 	- Fixed filename problems with Fl_File_Chooser -
